--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -81,12 +81,15 @@ In 3D, the value for <InlineEquation equation=" w " />, the distributed load on 
 
 <Image src='/sta/hydrostatic_fluid_pressure/Fluid3DPlate.PNG' width='5'></Image>
 
-<div style="padding-left: 330px;"><InlineEquation equation="w = p = \\rho \\ g \\ h"/><span style="color: #FFA500"><InlineEquation equation = "\\ \\ \\ \\ \\ [\\frac{N}{m^2}]"/></span></div>
-<div style="text-align: center;"><span style="color: #b814e0">(Force over area)</span></div>
-<div style="text-align: center;">To find F<sub>R</sub>, multiply by area:</div>
-<div style="padding-left: 320px;"><InlineEquation equation="F_R = w \\ (b \\ L)"/><span style="color: #b814e0"> &larr; volume under dist load!</span></div>
-<div style="text-align: center"><InlineEquation equation="= \\rho \\ g \\ h \\ b \\ L"/></div>
-<br>
+<DisplayEquation equation = "F_R = \\rho \\ g \\ h \\ b \\ L" background = "True" title = "In 3D, the resultant force from the distributed load can be written as" id = "hfp-3D" derivation = "True">
+	<p>
+		<div style = "padding-left: 320px;"><InlineEquation equation = "w = p = \\rho \\ g \\ h"/><span style = "color: gray"><InlineEquation equation = "\\ \\ \\ \\ \\ [\\frac{N}{m^2}]"/></span></div>
+		<div style = "text-align: center;">(force over area)</div>
+		<div style = "text-align: center;">To find F<sub>R</sub>, multiply by area:</div>
+		<div style = "padding-left: 310px;"><InlineEquation equation = "F_R = w \\ (b \\ L)"/> &larr; volume under distributed load!</div>
+		<div style = "text-align: center;"><InlineEquation equation = "= \\rho \\ g \\ h \\ b \\ L"/></div>
+	 </p>
+</DisplayEquation>
 
 <p>
 In 2D, the the value for <InlineEquation equation=" w " />, the distributed load on the plate from the fluid, is the pressure <InlineEquation equation=" P " /> at depth <InlineEquation equation=" h " /> <strong> multiplied by the plate depth <InlineEquation equation=" b " />. </strong> To solve for the resultant force from the distributed load we multiply by the length of the plate.
@@ -94,11 +97,15 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 
 <Image src='/sta/hydrostatic_fluid_pressure/Fluid2DPlate.PNG' width='5'></Image>
 
-<div style="padding-left: 312px;"><InlineEquation equation="w = p \\ b = \\rho \\ g \\ h \\ b"/><span style="color: #FFA500"><InlineEquation equation = "\\ \\ \\ \\ \\ [\\frac{N}{m^2}] \\ [m] = [\\frac{N}{m}]"/></span></div>
-<div style="text-align: center;"><span style="color: #b814e0">(Force over length)</span></div>
-<div style="text-align: center;">To find F<sub>R</sub>, multiply by length:</div>
-<div style="text-align: center"><InlineEquation equation="F_R = w \\ L = \\rho \\ g \\ h \\ b \\ L"/></div>
-<div style="padding-left: 370px;"><span style="color: #b814e0"> &uarr; area under dist. load!</span></div>
+<DisplayEquation equation = "F_R = \\rho \\ g \\ h \\ b \\ L" background = "True" title = "In 2D, the resultant force from the distributed load can be written as" id = "hfp-2D" derivation = "True">
+	<p>
+		<div style = "padding-left: 304px;"><InlineEquation equation = "w = p \\ b = \\rho \\ g \\ h \\ b"/><span style = "color: gray"><InlineEquation equation = "\\ \\ \\ \\ \\ [\\frac{N}{m^2}] \\ [m] = [\\frac{N}{m}]"/></span></div>
+		<div style = "text-align: center;">(force over length)</div>
+		<div style = "text-align: center;">To find F<sub>R</sub>, multiply by length:</div>
+		<div style = "text-align: center;"><InlineEquation equation = "F_R = w \\ L = \\rho \\ g \\ h \\ b \\ L"/></div>
+		<div style = "padding-left: 360px;">&uarr; area under distributed load!</div>
+	 </p>
+</DisplayEquation>
 
 </SubSection>
 
