small spacing adjustment
aligned some terms in a series of equations

--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -114,8 +114,8 @@ The center of mass, center of gravity, and center of volume are all represented 
         <div style = "text-align: center; margin-bottom: 10px;">center of gravity: <InlineEquation equation = "\\bar{x}, \\bar{y}"/></div>
 	    <div style = "text-align: center; margin-bottom: 10px;"><InlineEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dW}{\\int dW} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dW}{\\int dW}"/></div>
         <div style = "text-align: center; margin-bottom: 10px;">We know that: <InlineEquation equation = "W = m * g"/></div>
-        <div style = "padding-left: 290px; margin-bottom: 10px;"><InlineEquation equation = "dW = m * \\cancel{dg} + dm * g \\ \\ \\ \\ \\"/>assume that gravity = constant</div>
-        <div style = "padding-left: 312px; margin-bottom: 10px;"><InlineEquation equation = "dW = g * dm"/><span style = "color: gray"><InlineEquation equation = "\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ dg = 0"/></span></div>
+        <div style = "padding-left: 269px; margin-bottom: 10px;"><InlineEquation equation = "dW = m * \\cancel{dg} + dm * g \\ \\ \\ \\ \\"/>assume that gravity = constant</div>
+        <div style = "padding-left: 312px; margin-bottom: 10px;"><InlineEquation equation = "dW = g * dm"/><span style = "color: gray"><InlineEquation equation = "\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ dg = 0"/></span></div>
         <div style = "text-align: center; margin-bottom: 10px;"><InlineEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} * \\cancel{g} \\ dm}{\\int \\cancel{g} \\ dm}"/></div>
         <div style = "padding-left: 290px; margin-bottom: 10px;"><InlineEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dm}{\\int dm} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dm}{\\int dm} \\ \\ \\ \\ \\"/>center of mass</div>
         <div style = "text-align: center; margin-bottom: 10px;">We know that mass = <InlineEquation equation = "\\rho * V"/></div>
