--- a/src/pages/about/docs.astro
+++ b/src/pages/about/docs.astro
@@ -212,7 +212,7 @@ This concept is very important, and applies to almost every component. The diffe
                     <Item> Hand drawn: gray (#C5C3BB) grid </Item>
                     <Item> Computer generated: No grid </Item>
                 </Itemize>
-            <Item>Objects: <span style="color: var(--illini-orange)">orange (#FFF1DB)</span> </Item>
+            <Item>Objects: <span style="color: var(--illini-orange)">orange (#FFF1DB)</span> with a black (#000000) boarder/details </Item>
             
             <Item>Axes and dimensions: <span style="color: black">black (#000000)</span></Item>
             <Item>Fixed wall or ground: <span style="color: #747371">gray (#969696)</span></Item>
