--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -121,19 +121,19 @@ div.grid{
             <div class="grid card-grid-fancy">
                 <div class="main-cards">
                     <a href="/sta">
-                        <img src="/home_page/StaticsCoverPic.png" alt="Thermodynamics logo" />
+                        <img src="/home_page/StaticsCoverPic.png" alt="Statics logo" />
                         <p>Statics</p>
                     </a>
                 </div>
                 <div class="main-cards">
                     <a href="/dyn">
-                        <div style="background-color: #fff; "></div>
+                        <img src="/home_page/DynamicsCoverPic.png" alt="Dynamics logo" />
                         <p>Dynamics</p>
                     </a>
                 </div>
                 <div class="main-cards">
                     <a href="/sol">
-                        <div style="background-color: #fff; "></div>
+                        <img src="/home_page/SolidMechanicsCoverPic.png" alt="Solid Mechanics logo" />
                         <p>Solid Mechanics</p>
                     </a>
                 </div>	
