--- a/src/pages/sol/torsion.astro
+++ b/src/pages/sol/torsion.astro
@@ -58,13 +58,10 @@ Force X distance [lb-in or N-m]
 
 <Image src="/sol/torsion/Convention.png" width="5">  Sign convention </Image>
 
-<BlueText>
  <Itemize>
      <Item><InlineEquation equation="\\phi > 0" /> : counter clockwise </Item>
      <Item><InlineEquation equation="\\phi < 0" /> : clockwise </Item>
  </Itemize>
-</BlueText>
-
 
 <Image src="/sol/torsion/RightHandRule.png" width="4">  Right hand rule </Image>
 
@@ -152,7 +149,15 @@ The shear stress in the elastic range varies linearly with the radial position i
     </CalloutCard>
 </CalloutContainer>
 
-<DisplayEquation equation="J = \\int_0^R{\\rho^2dA} = \\int_0^R{\\rho^2(2\\pi\\rho d\\rho)} =2\\pi \\int_0^R{\\rho^3d\\rho} = \\frac{\\pi R^4}{2} = \\frac{\\pi D^4}{32}\\" title="Solid shaft (radius and diameter)." background="True"/>
+<DisplayEquation equation='J = \\frac{\\pi R^4}{2} = \\frac{\\pi D^4}{32}' title="Solid shaft (radius and diameter)." background="True" derivation="True" id="tor-pmi">
+    
+    <DisplayEquation equation='J = \\int_A{\\rho^2dA}\\' />
+    <DisplayEquation equation='J = \\int_{0}^{2\\pi}{\\int_0^R{\\rho^2(\\rho d\\rho d\\theta)}}\\' />
+    <DisplayEquation equation='J = \\int_{0}^{2\\pi}{d\\theta}\\int_0^R{\\rho^3d\\rho}\\' />
+    <DisplayEquation equation='J = 2\\pi\\left[\\frac{1}{4} p^4\\right]_0^R\\' />
+    <DisplayEquation equation='J = \\frac{\\pi R^4}{2} = \\frac{\\pi D^4}{32}\\' />
+
+</DisplayEquation>
 
 <DisplayEquation equation="J = \\frac{\\pi}{2}(R_o^4-R_i^4) = \\frac{\\pi}{32}(D_o^4-D_i^4)\\" title="Hollow shaft (inner and outer radius)." background="True"/>
 </SubSubSection>
