--- a/src/pages/sol/torsion.astro
+++ b/src/pages/sol/torsion.astro
@@ -239,6 +239,7 @@ From observation:
             <p>
                 <DisplayEquation equation="\\tau = \\frac{P c}{\\omega J}\\" title="Maximum shear stress:"/>
             </p>
+	<em>Note:</em>  1 hp = 550 ft.lb/s</em>
     </CalloutCard>
 </CalloutContainer>
 
@@ -270,8 +271,6 @@ The angle of twist between two mating gears is related through the gear ratio.
 <DisplayEquation equation="GR = d_B:d_A\\" title="Gear ratio." background="True" />
 
 <DisplayEquation equation="\\phi_A = GR \\text{  } \\phi_B\\" title="Angle of twist" background="True" />
-
-<em>Note:</em>  1 hp = 550 ft.lb/s
 
 </SubSubSection>
 
