multiline latex tweak

--- a/src/pages/sol/torsion.astro
+++ b/src/pages/sol/torsion.astro
@@ -151,11 +151,11 @@ The shear stress in the elastic range varies linearly with the radial position i
 
 <DisplayEquation equation='J = \\frac{\\pi R^4}{2} = \\frac{\\pi D^4}{32}' title="Solid shaft (radius and diameter)." background="True" derivation="True" id="tor-pmi">
     
-    <DisplayEquation equation='J = \\int_A{\\rho^2dA}\\' />
-    <DisplayEquation equation='J = \\int_{0}^{2\\pi}{\\int_0^R{\\rho^2(\\rho d\\rho d\\theta)}}\\' />
-    <DisplayEquation equation='J = \\int_{0}^{2\\pi}{d\\theta}\\int_0^R{\\rho^3d\\rho}\\' />
-    <DisplayEquation equation='J = 2\\pi\\left[\\frac{1}{4} p^4\\right]_0^R\\' />
-    <DisplayEquation equation='J = \\frac{\\pi R^4}{2} = \\frac{\\pi D^4}{32}\\' />
+    <DisplayEquation equation=`\\begin{aligned}J &= \\int_A{\\rho^2dA}\\\\ 
+     &= \\int_{0}^{2\\pi}{\\int_0^R{\\rho^2(\\rho d\\rho d\\theta)}}\\\\ 
+    &= \\int_{0}^{2\\pi}{d\\theta}\\int_0^R{\\rho^3d\\rho}\\\\ 
+    &= 2\\pi\\left[\\frac{1}{4} p^4\\right]_0^R\\\\ 
+    &= \\frac{\\pi R^4}{2} = \\frac{\\pi D^4}{32}\\end{aligned}` />
 
 </DisplayEquation>
 
