--- a/src/pages/sol/torsion.astro
+++ b/src/pages/sol/torsion.astro
@@ -239,7 +239,7 @@ From observation:
             <p>
                 <DisplayEquation equation="\\tau = \\frac{P c}{\\omega J}\\" title="Maximum shear stress:"/>
             </p>
-	<em>Note:</em>  1 hp = 550 ft.lb/s</em>
+	<em>Note:</em>  1 hp = 550 ft.lb/s
     </CalloutCard>
 </CalloutContainer>
 
