create logo for machine failure

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -185,15 +185,15 @@ div.grid{
                 </div>
                 <div class="main-cards">
                     <a href="/mf">
-                        <div style="background-color: #fff;"></div>
-                        <p>Mechanism Failure</p>
+                        <img src="/home_page/Machine_Failure_image.png" style="background-color: white" alt="Machine Failure Logo" />
+                        <p>Machine Failure</p>
                     </a>
                 </div>
             </div>
         
             <ul class="mt-0 card-grid-simple">
                 <li><a href="/md">Mechanism Design</a></li>
-                <li><a href="/mf">Mechanism Failure</a></li>
+                <li><a href="/mf">Machine Failure</a></li>
             </ul>
         </div>
     </div>
