--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -108,12 +108,23 @@ The center of mass, center of gravity, and center of volume are all represented 
     </tbody>
 </DisplayTable>
 
-  <DisplayEquation title="When are Centers of Gravity, Mass, and Volume the same?" id="com" background="True" equation="" derivation="True">
-    
-      	<p> The center of gravity, center of mass, and center of volume of an object are the same when that object has a constant density (is homogeneous) and gravity is constant along the object. </p>
-	<Image src='/sta/centers_of_mass/CoGMVDerivation.jpg' width='5'> </Image>
-
-  </DisplayEquation>
+<DisplayEquation title="When are Centers of Gravity, Mass, and Volume the same?" id="com" background="True" equation="" derivation="True">
+    <p>
+        The center of gravity, center of mass, and center of volume of an object are the same when that object has a constant density (is homogeneous) and gravity is constant along the object.
+        <div style = "text-align: center; margin-bottom: 10px;">center of gravity: <InlineEquation equation = "\\bar{x}, \\bar{y}"/></div>
+	    <div style = "text-align: center; margin-bottom: 10px;"><InlineEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dW}{\\int dW} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dW}{\\int dW}"/></div>
+        <div style = "text-align: center; margin-bottom: 10px;">We know that: <InlineEquation equation = "W = m * g"/></div>
+        <div style = "padding-left: 269px; margin-bottom: 10px;"><InlineEquation equation = "dW = m * \\cancel{dg} + dm * g \\ \\ \\ \\ \\"/>assume that gravity = constant</div>
+        <div style = "padding-left: 312px; margin-bottom: 10px;"><InlineEquation equation = "dW = g * dm"/><span style = "color: gray"><InlineEquation equation = "\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ dg = 0"/></span></div>
+        <div style = "text-align: center; margin-bottom: 10px;"><InlineEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} * \\cancel{g} \\ dm}{\\int \\cancel{g} \\ dm}"/></div>
+        <div style = "padding-left: 290px; margin-bottom: 10px;"><InlineEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dm}{\\int dm} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dm}{\\int dm} \\ \\ \\ \\ \\"/>center of mass</div>
+        <div style = "text-align: center; margin-bottom: 10px;">We know that mass = <InlineEquation equation = "\\rho * V"/></div>
+        <div style = "padding-left: 272px; margin-bottom: 10px;"><InlineEquation equation = "dm = \\rho * V * d + V * \\cancel{d} * \\rho \\ \\ \\ \\ \\"/>assuming <InlineEquation equation = "\\rho"/> = constant</div>
+        <div style = "padding-left: 316px; margin-bottom: 10px;"><InlineEquation equation = "dm = \\rho * V * d"/><span style = "color: gray"><InlineEquation equation = "\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\  \\ \\ \\ \\ \\ d \\rho = 0"/></span></div>
+        <div style = "text-align: center; margin-bottom: 10px;"><InlineEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} * \\cancel{\\rho} \\ dV}{\\int \\cancel{\\rho} \\ dV}"/></div>
+        <div style = "padding-left: 290px;"><InlineEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dV}{\\int dV} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dV}{\\int dV} \\ \\ \\ \\ \\"/>center of volume (centroid)</div>
+    </p>
+</DisplayEquation>
 
 </Section>
 
