--- a/src/pages/sol/transverse_shear.astro
+++ b/src/pages/sol/transverse_shear.astro
@@ -193,6 +193,8 @@ Shear flow is the a measure of force per length.
 Shear flow is most applicable in design situations such as built-up beams.
 Built-up beams are beams that have been put together with either an adhesive (glue, epoxy, etc) or fasteners (nails, bolts, etc). Calculating shear flow allows for determining how much adhesive or how often a fastener is needed.
 
+<DisplayEquation equation="F = q\\Delta s" title="For uniformly spaced fasteners:" background="True" />
+
 <Image src="/sol/transverse_shear/BuiltUpBeams.png" width="5"></Image>
 
 <p>
