--- a/src/pages/sol/stress_transformation.astro
+++ b/src/pages/sol/stress_transformation.astro
@@ -174,7 +174,7 @@ Normal and shear stresses can be shown graphically as a function of <InlineEquat
   
   <DisplayEquation equation="C = \\sigma_{avg} = \\frac{\\sigma_x +\\sigma_y}{2} = \\frac{\\sigma_1 +\\sigma_2}{2}\\" title="Circle centroid." background="True"/>
   
-  <DisplayEquation equation="R = \\sqrt{(\\frac{\\sigma_x - \\sigma_y}{2})^2 + \\tau_{xy}^2}\\" title="Cirlce radius." background="True"/>
+  <DisplayEquation equation="R = \\sqrt{(\\frac{\\sigma_x - \\sigma_y}{2})^2 + \\tau_{xy}^2}\\" title="Circle radius." background="True"/>
   
   <DisplayEquation equation="\\begin{align} \\rm\\ Point \\ X&: (\\sigma_x, \\tau_{xy}) \\\\ \\rm\\ Point \\ Y&: (\\sigma_y, -\\tau_{xy}) \\end{align}" title="Two points of the circle." background="True"/>
   
@@ -438,7 +438,7 @@ Normal and shear stresses can be shown graphically as a function of <InlineEquat
     
     <DisplayEquation equation="C = \\sigma_{avg} = \\frac{\\sigma_1 +\\sigma_3}{2}\\" title="Circle centroid." background="True"/>
   
-  <DisplayEquation equation="R = \\frac{\\sigma_1 - \\sigma_3}{2} " title="Cirlce radius." background="True"/>
+  <DisplayEquation equation="R = \\frac{\\sigma_1 - \\sigma_3}{2} " title="Circle radius." background="True"/>
   
   <DisplayEquation equation="(\\sigma_{plane}, \\tau_{plane})" title="Points of the circle are plotted using each face." background="True"/>
   
