--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -126,9 +126,9 @@ The center of mass, center of gravity, and center of volume are all represented 
 
 <DisplayEquation title = "center of volume (centroid)" id = "cov" background = "True" equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dV}{\\int dV} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dV}{\\int dV}" derivation = "True">
     <p>
-        <div style = "text-align: center; margin-bottom: 10px;">We know that mass = <InlineEquation equation = "\\rho * V"/></div>
-        <div style = "padding-left: 272px; margin-bottom: 10px;"><InlineEquation equation = "dm = \\rho * V * d + V * \\cancel{d} * \\rho \\ \\ \\ \\ \\"/>assuming <InlineEquation equation = "\\rho"/> = constant</div>
-        <div style = "padding-left: 316px; margin-bottom: 10px;"><InlineEquation equation = "dm = \\rho * V * d"/><span style = "color: gray"><InlineEquation equation = "\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ d \\rho = 0"/></span></div>
+        <div style = "text-align: center; margin-bottom: 10px;">We know that mass = <InlineEquation equation = "\\rho * V \\ \\ \\ \\ \\"/>(<InlineEquation equation = "\\rho"/> = density)</div>
+        <div style = "padding-left: 272px; margin-bottom: 10px;"><InlineEquation equation = "dm = \\rho * dV + V * \\cancel{d \\rho} \\ \\ \\ \\ \\"/>assuming <InlineEquation equation = "\\rho"/> = constant</div>
+        <div style = "padding-left: 316px; margin-bottom: 10px;"><InlineEquation equation = "dm = \\rho * dV"/><span style = "color: gray"><InlineEquation equation = "\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ d \\rho = 0"/></span></div>
         <div style = "text-align: center; margin-bottom: 10px;"><InlineEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} * \\cancel{\\rho} \\ dV}{\\int \\cancel{\\rho} \\ dV}"/></div>
         <div style = "text-align: center;"><InlineEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dV}{\\int dV} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dV}{\\int dV}"/></div>
     </p>
