--- a/src/pages/sol/torsion.astro
+++ b/src/pages/sol/torsion.astro
@@ -154,12 +154,18 @@ The shear stress in the elastic range varies linearly with the radial position i
     <DisplayEquation equation='J = \\int_A{\\rho^2dA}\\' />
     <DisplayEquation equation='J = \\int_{0}^{2\\pi}{\\int_0^R{\\rho^2(\\rho d\\rho d\\theta)}}\\' />
     <DisplayEquation equation='J = \\int_{0}^{2\\pi}{d\\theta}\\int_0^R{\\rho^3d\\rho}\\' />
-    <DisplayEquation equation='J = 2\\pi\\left[\\frac{1}{4} p^4\\right]_0^R\\' />
+    <DisplayEquation equation='J = 2\\pi\\left[\\frac{1}{4} \\rho^4\\right]_0^R\\' />
     <DisplayEquation equation='J = \\frac{\\pi R^4}{2} = \\frac{\\pi D^4}{32}\\' />
 
 </DisplayEquation>
 
-<DisplayEquation equation="J = \\frac{\\pi}{2}(R_o^4-R_i^4) = \\frac{\\pi}{32}(D_o^4-D_i^4)\\" title="Hollow shaft (inner and outer radius)." background="True"/>
+<DisplayEquation equation="J = \\frac{\\pi}{2}(R_o^4-R_i^4) = \\frac{\\pi}{32}(D_o^4-D_i^4)\\" title="Hollow shaft (inner and outer radius)." background="True" derivation="True" id="tor-hol">
+    
+    <DisplayEquation equation='J = \\int_{0}^{2\\pi}{\\int_{R_i}^{R_o}{\\rho^3 d\\rho d\\theta}}' />
+    <DisplayEquation equation='J = \\frac{\\pi}{2} [{R_o}^4 - {R_i}^4]' />
+
+</DisplayEquation>
+
 </SubSubSection>
 
 <SubSubSection title="Shear Stress: Angle of Twist" id="angle_of_twist">
