fixed #166, removed button from stress_transformation last Warning box

--- a/src/pages/sol/stress_transformation.astro
+++ b/src/pages/sol/stress_transformation.astro
@@ -630,7 +630,7 @@ We can repeat this procedure for the second eigenvalue, <InlineEquation equation
 
 <DisplayEquation equation="\\sigma_{x}' = \\sigma_{y}' = \\sigma_{avg} = \\frac{\\sigma_x + \\sigma_y}{2}\\" title="Average normal stress." background="True"/>
 
-<Warning title="Unlike with the principal stress element, the normal stresses are not zero." id="max-shr"> </Warning>
+<Warning title="Unlike with the principal stress element, the normal stresses are not zero." remove_button="True" id="max-shr" />
 
 </SubSection>
 
