Changed equations to multiline latex + capitalized Equation boxes

--- a/src/components/DisplayEquation.astro
+++ b/src/components/DisplayEquation.astro
@@ -35,7 +35,7 @@ if (title){
 
 
 
-<div id={id} class={background ? 'background-yellow overflow-hidden mb-2 w-100 text-black' : 'mb-2 w-100'}>
+<div id={id} class={background ? 'background-yellow overflow-hidden mb-2 w-100 text-black' : 'w-100'}>
     { title &&
     <div class="mb-2 px-2">
         {title && title}{id && <small>{` #${id}`}</small>}
