--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -112,25 +112,23 @@ The center of mass, center of gravity, and center of volume are all represented 
     When are Centers of Gravity, Mass, and Volume the same? Deriving each will make this clearer.
 </p>
 
-<DisplayEquation title = "center of gravity" id = "cog" background = "True" equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dW}{\\int dW} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dW}{\\int dW}"></DisplayEquation>
+<DisplayEquation title = "Center of gravity" id = "cog" background = "True" equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dW}{\\int dW} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dW}{\\int dW}"></DisplayEquation>
 
-<DisplayEquation title = "center of mass" id = "com" background = "True" equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dm}{\\int dm} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dm}{\\int dm}" derivation = "True">
-    <p>
-        <div style = "text-align: center; margin-bottom: 10px;">We know that: <InlineEquation equation = "W = m * g"/></div>
-        <div style = "padding-left: 269px; margin-bottom: 10px;"><InlineEquation equation = "dW = m * \\cancel{dg} + dm * g \\ \\ \\ \\ \\"/>assume that gravity = constant</div>
-        <div style = "padding-left: 312px; margin-bottom: 10px;"><InlineEquation equation = "dW = g * dm"/><span style = "color: gray"><InlineEquation equation = "\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ dg = 0"/></span></div>
-        <div style = "text-align: center; margin-bottom: 10px;"><InlineEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} * \\cancel{g} \\ dm}{\\int \\cancel{g} \\ dm}"/></div>
-        <div style = "text-align: center;"><InlineEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dm}{\\int dm} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dm}{\\int dm}"/></div>
-    </p>
+<DisplayEquation title = "Center of mass" id = "com" background = "True" equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dm}{\\int dm} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dm}{\\int dm}" derivation = "True" >
+    <p class="text-center">We know that: \(W = m \cdot g\)</p>
+        
+        <DisplayEquation equation =` \\begin{align} \\Rightarrow dW &=  dm \\cdot g  + m \\cdot \\cancel{dg}  && \\text{assuming } g \\text{ is constant} \\\\ 
+        &= g\\cdot dm && dg = 0 \\end{align}` />
+        <DisplayEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} * \\cancel{g} \\ dm}{\\int \\cancel{g} dm}"/>
+        <DisplayEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dm}{\\int dm} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dm}{\\int dm}"/>
 </DisplayEquation>
 
-<DisplayEquation title = "center of volume (centroid)" id = "cov" background = "True" equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dV}{\\int dV} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dV}{\\int dV}" derivation = "True">
-    <p>
-        <div style = "text-align: center; margin-bottom: 10px;">We know that mass = <InlineEquation equation = "\\rho * V \\ \\ \\ \\ \\"/>(<InlineEquation equation = "\\rho"/> = density)</div>
-        <div style = "padding-left: 272px; margin-bottom: 10px;"><InlineEquation equation = "dm = \\rho * dV + V * \\cancel{d \\rho} \\ \\ \\ \\ \\"/>assuming <InlineEquation equation = "\\rho"/> = constant</div>
-        <div style = "padding-left: 316px; margin-bottom: 10px;"><InlineEquation equation = "dm = \\rho * dV"/><span style = "color: gray"><InlineEquation equation = "\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ d \\rho = 0"/></span></div>
-        <div style = "text-align: center; margin-bottom: 10px;"><InlineEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} * \\cancel{\\rho} \\ dV}{\\int \\cancel{\\rho} \\ dV}"/></div>
-        <div style = "text-align: center;"><InlineEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dV}{\\int dV} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dV}{\\int dV}"/></div>
+<DisplayEquation title = "Center of volume (centroid)" id = "cov" background = "True" equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dV}{\\int dV} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dV}{\\int dV}" derivation = "True">
+    <p class="text-center">We know that mass = <InlineEquation equation = "\\rho * V \\ \\ \\ \\ \\"/>(<InlineEquation equation = "\\rho"/> = density)</p>
+        <DisplayEquation equation =`\\begin{align} \\Rightarrow  dm &= \\rho * dV + V * \\cancel{d \\rho} && \\text{assuming } \\rho \\text{ is constant} \\\\
+         &= \\rho * dV  && d \\rho = 0 \\end{align}`/>
+        <DisplayEquation equation="\\bar{y} = \\frac{\\int \\tilde{y} * \\cancel{\\rho} \\ dV}{\\int \\cancel{\\rho} \\ dV}" />
+        <DisplayEquation equation="\\bar{y} = \\frac{\\int \\tilde{y} \\ dV}{\\int dV} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dV}{\\int dV}" />
     </p>
 </DisplayEquation>
 
