create DFA page

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -481,6 +481,7 @@ const path = Astro.url.pathname;
                                 <li><a href="/md/Instant_Centers?origin=sidebar">Instant Centers</a></li>
                                 <li><a href="/md/Cams?origin=sidebar">Cams</a></li>
                                 <li><a href="/md/Position_Velocity_Acceleration?origin=sidebar">Position Velocity Acceleration</a></li>
+                                <li><a href="/md/Dynamic_Force_Analysis?origin=sidebar">Dynamic Force Analysis</a></li>
                             </ol>
                         </section>
                     </div>
